--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,11 @@
             <version>5.0.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.12.2</version>
+        </dependency>
 
 
 
