--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,12 @@
             <version>1.12.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.78</version>
+        </dependency>
+
 
 
 <!--        <dependency>-->
