--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,12 @@
             <version>1.2.78</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.12</version>
+        </dependency>
+
 
 
 <!--        <dependency>-->
