--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,12 @@
             <version>4.5.12</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.20</version>
+        </dependency>
+
 
 
 <!--        <dependency>-->
