--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,8 @@
         <maven.compiler.encoding>UTF-8</maven.compiler.encoding>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
-        <selenium.version>4.12.1</selenium.version>
+        <selenium.version>4.14.1</selenium.version>
+        <selenium.http.jdk.client.version>4.13.0</selenium.http.jdk.client.version>
         <javafx.version>11</javafx.version>
     </properties>
 
@@ -108,7 +109,7 @@
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-http-jdk-client</artifactId>
-            <version>${selenium.version}</version>
+            <version>${selenium.http.jdk.client.version}</version>
         </dependency>
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
